@@ -1,3 +1,11 @@
+15-11-05 mfp. Changed FileInPath to deal with new versions of its
+environment variables.
+   CMSDATA          --> CMSSW_DATA_PATH
+   CMS_SEARCH_PATH  --> CMSSW_SEARCH_PATH
+
+Modified tests to fit. Code and tests also deal with the old environment
+variables, as a temporary measure.
+
 01-11-05 mfp. Attempted to run the "test/run_all_parser_t.sh" script.
 
 The tests fail because the output from printing the parse tree is no
